trunk
=====
* updated user guide examples and documentation to reflect new mxPath 'connect' argument.
* removed 'all' argument from mxPath function and replaced it with 'connect' argument. Also updated demos that used 'all' argument and documentation.
* removed 'excludeself' argument from mxPath() function
* added deprecation warning for argument 'all'=TRUE in mxPath()
* eliminated flattenModelHelper() and replaced with functions that use lapply()
* changed signature of genericObjModelConvert() to return list(job, flatJob) in order to improve performance
* added '@likelihoods' slot for MxFIMLObjective and MxRAMObjective (when using raw data)

Beta Release 999.0.0-1690 (June 27, 2011)
=========================================
* added omxSelectRowsAndCols, omxSelectRows and omxSelectCols documentation
* fixed model flattening to keep track of confidence intervals in submodels
* fixed a bug in omxParallelCI() introduced by previous change
* added verifyCorrelationMatrix to mxData. See http://openmx.psyc.virginia.edu/issue/2011/06/error-checking-correlation-matrices
* added error checking for dimnames on MxMatrix and MxAlgebra objects
* reformated comments and heading style for all demos
* fixed segmentation fault on backend error condition

Beta Release 999.0.0-1661 (May 20, 2011)
========================================
* turn off jiggling of free parameters with starting values of 0.0 when useOptimizer=FALSE
* allow non-RAM objective functions in RAM model
* change model type names to 'default' and 'RAM'
* no longer explicitly transforming RAM + raw data models into FIML models
* fixed bug in MxMatrix indexing operator

Pre-Release 999.0.0-1609 (April 7, 2011)
========================================
* added argument 'threshnames' to mxFIMLObjective()
* eliminated "initialize" method for MxMatrix objects
* added "omxCreateMatrix" method for MxMatrix objects
* renaming majority of omx* functions to imx* functions. See http://openmx.psyc.virginia.edu/thread/761